OBG 260 fixed NoOp Mapper

--- a/technical-embedded-ui/tpp-ui/src/app/initial-request/initial-request.component.html
+++ b/technical-embedded-ui/tpp-ui/src/app/initial-request/initial-request.component.html
@@ -71,6 +71,8 @@
   </form>
 
   <br/>
+  {{resultstructure}}
+  <br/>
   <a href="assets/docs/rendered/flow.svg">Link to entire end-to-end flow</a>
   <div *ngIf="!serviceSessionId.value">
     <h2>What happens in backend during this request</h2>
