--- a/technical-embedded-ui/tpp-ui/src/app/initial-request/initial-request.component.html
+++ b/technical-embedded-ui/tpp-ui/src/app/initial-request/initial-request.component.html
@@ -71,7 +71,9 @@
   </form>
 
   <br/>
+  <pre>
   {{resultstructure}}
+  </pre>
   <br/>
   <a href="assets/docs/rendered/flow.svg">Link to entire end-to-end flow</a>
   <div *ngIf="!serviceSessionId.value">
