--- a/consent-ui/src/app/ais/entry-page/entry-page.component.html
+++ b/consent-ui/src/app/ais/entry-page/entry-page.component.html
@@ -17,38 +17,7 @@
   <div class="col-md-8 bg-white h-md-100">
     <div class="d-md-flex align-items-center h-100 p-4 justify-content-center">
       <div class="d-md-flex align-items-center ">
-<!--
-        <form [formGroup]="scaForm" (ngSubmit)="onSubmit()">
-
-          <div class="card">
-
-            <h3 class="mb-4 text-left">SCA Method</h3>
-
-            <p class="text-secondary mb-5 text-left">Please choose an SCA method to go on.</p>
-
-            <div class="form-group my-4">
-              <div *ngFor="let scaMethod of scaMehods; let i = index" class="form-check">
-                <input class="form-check-input"
-                       type="radio"
-                       name="scaMethod"
-                       [id]="scaMethod.id"
-                       [checked]="i == 0" (change)="handleMethodSelectedEvent(scaMethod)">
-                <label class="form-check-label ml-4" [for]="scaMethod.id">
-                  {{scaMethod.scaMethod}} with value {{scaMethod.methodValue}}
-                </label>
-              </div>
-            </div>
-
-            <div class="form-group d-flex flex-row justify-content-lg-between">
-              <button class="btn md-6 w-100 mr-sm-2 mr-md-3 btn-outline-secondary" (click)="onCancel()">Cancel</button>
-              <button  type="submit" class="btn md-6 w-100 btn-primary" [disabled]="!selectedScaMethod">Send Code</button>
-            </div>
-
-          </div>
-
-        </form>
--->
-
+        <consent-app-entry-page-accounts></consent-app-entry-page-accounts>
       </div>
     </div>
   </div>
