--- a/fintech-examples/fintech-ui/src/app/bank-search/common/search/search.component.html
+++ b/fintech-examples/fintech-ui/src/app/bank-search/common/search/search.component.html
@@ -2,6 +2,7 @@
   <i class="fa fa-search form-control-feedback"></i>
   <input
     [formControl]="searchTerm"
+    [value]="'adorsys'"
     autocomplete="off"
     name="searchValue"
     type="text"
