OBG-352. Added basic transaction selection

--- a/consent-ui/src/app/ais/entry-page-accounts/entry-page-accounts.component.html
+++ b/consent-ui/src/app/ais/entry-page-accounts/entry-page-accounts.component.html
@@ -14,7 +14,7 @@
     </div>
     <div class="form-group d-flex flex-row justify-content-lg-between">
       <button class="btn md-6 w-100 mr-sm-2 mr-md-3 btn-outline-secondary">Cancel</button>
-      <button type="submit" class="btn md-6 w-100 btn-primary" [disabled]="!selectedAccess">{{submitButtonMessage()}}</button>
+      <button type="submit" class="btn md-6 w-100 btn-primary">{{submitButtonMessage()}}</button>
     </div>
   </div>
 </form>
