OBG 236 listAccounts Component cares about accounts, not dashboard

--- a/fintech-examples/fintech-ui/src/app/dashboard/home/home.component.html
+++ b/fintech-examples/fintech-ui/src/app/dashboard/home/home.component.html
@@ -1,1 +1,1 @@
-<app-show-accounts *ngIf="showAccounts" [accounts]="accounts" [bankId]="bankID"></app-show-accounts>
+<app-show-accounts [showAccounts]="true" [bankId]="bankID"></app-show-accounts>
