--- a/fintech-examples/fintech-ui/src/app/dashboard/show-transactions/show-transactions.component.scss
+++ b/fintech-examples/fintech-ui/src/app/dashboard/show-transactions/show-transactions.component.scss
@@ -1,8 +1,62 @@
 @import 'src/assets/themes/variables';
 
+.parent {
+  display: flex;
+  flex-direction: row;
+}
+
+.list-container {
+  @extend %layout-padding;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 3px;
+  width: 100%;
+  text-align: start;
+  margin: 6px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.145);
+
+  &--shadow {
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+  }
+}
+
 .date {
-  margin-bottom: 4px;
-  font-size: 0.7rem;
-  color: $primary;
-  font-weight: bold;
+  width: 10%;
+}
+.description {
+  width: 80%;
+}
+.amount-number {
+  width: 5%;
+  font-family: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
+  text-align: right;
+}
+.amount-currency {
+  width: 5%;
+  text-align: right;
+}
+
+.list-item {
+  &__headline {
+    font-size: 1.1rem;
+    margin-right: 0;
+
+    &--small {
+      font-size: 0.85rem;
+      color: $primary;
+    }
+  }
+
+  &__subheadline {
+    font-size: 0.85rem;
+    margin-bottom: 0;
+    color: $primary;
+
+    &--large {
+      font-size: 1.1rem;
+    }
+  }
 }
