--- a/fintech-examples/fintech-ui/src/app/dashboard/show-accounts/show-accounts.component.scss
+++ b/fintech-examples/fintech-ui/src/app/dashboard/show-accounts/show-accounts.component.scss
@@ -6,6 +6,14 @@
   flex-direction: row;
 }
 
+.selected {
+  color: black;
+}
+
+.unselected {
+  background-color: grey;
+}
+
 .list-container {
   @extend %layout-padding;
   display: flex;
@@ -21,6 +29,9 @@
 
   &--shadow {
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+  }
+  &--selected {
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 1);
   }
 }
 
