--- a/technical-embedded-ui/tpp-ui/src/app/initial-request/initial-request.component.html
+++ b/technical-embedded-ui/tpp-ui/src/app/initial-request/initial-request.component.html
@@ -37,6 +37,14 @@
     <label for="bankId">Bank id</label>
     <input id="bankId" name="bankId" type="text" [formControl]="bankId">
 
+    <br>
+    <label for="ipAddress">IP Address</label>
+    <input id="ipAddress" name="ipAddress" type="text" [disabled]="!computeIp" [formControl]="ipAddress">
+
+    <br>
+    <label for="computeIp">Compute IP Address</label>
+    <input id="computeIp" name="computeIp" type="checkbox" [formControl]="computeIp.value" (click)="onClickComputeIp()">
+
     <hr>
     <br>
     Supply if consent available to get result or you want to use your own session UUID:
