--- a/consent-ui/src/app/ais/entry-page/entry-page.component.html
+++ b/consent-ui/src/app/ais/entry-page/entry-page.component.html
@@ -17,8 +17,7 @@
   <div class="col-md-8 bg-white h-md-100">
     <div class="d-md-flex align-items-center h-100 p-4 justify-content-center">
       <div class="d-md-flex align-items-center ">
-        <consent-app-entry-page-accounts></consent-app-entry-page-accounts>
-        <!--<consent-app-entry-page-transactions></consent-app-entry-page-transactions>-->
+        <router-outlet></router-outlet>
       </div>
     </div>
   </div>
