OBG-352. Major parameter renaming

--- a/consent-ui/src/app/ais/entry-page/entry-page.component.html
+++ b/consent-ui/src/app/ais/entry-page/entry-page.component.html
@@ -1,24 +1,1 @@
-<div class="d-md-flex align-items-center h-100 align-items-stretch">
-  <!-- First-->
-  <div class="col-md-4 p-0 bg-light">
-    <div class="container-fluid">
-      <nav class="navbar navbar-light text-primary py-3">
-        <a class="navbar-brand" href="#">
-          <img class="logo" [src]="customizeService.getLogo()" />
-        </a>
-      </nav>
-    </div>
-    <div class="d-md-flex align-items-center h-100 justify-content-center">
-      <!-- <app-account-details></app-account-details> -->
-    </div>
-  </div>
-
-  <!--&lt;!&ndash; Second 1/4 &ndash;&gt;-->
-  <div class="col-md-8 bg-white h-md-100">
-    <div class="d-md-flex align-items-center h-100 p-4 justify-content-center">
-      <div class="d-md-flex align-items-center ">
-        <router-outlet></router-outlet>
-      </div>
-    </div>
-  </div>
-</div>
+<consent-app-card-with-sidebar></consent-app-card-with-sidebar>
