--- a/fintech-examples/fintech-ui/src/app/bank-search/common/search/search.component.html
+++ b/fintech-examples/fintech-ui/src/app/bank-search/common/search/search.component.html
@@ -1,8 +1,9 @@
+<!-- TODO remove default value adorsys from search -->
 <div class="search">
   <i class="fa fa-search form-control-feedback"></i>
   <input
-    [formControl]="searchTerm"
     [value]="'adorsys'"
+    [formControl]="searchTerm"
     autocomplete="off"
     name="searchValue"
     type="text"
