--- a/fintech-examples/fintech-ui/src/app/dashboard/home/home.component.html
+++ b/fintech-examples/fintech-ui/src/app/dashboard/home/home.component.html
@@ -1,1 +1,1 @@
-<app-show-accounts [showAccounts]="true" [bankId]="bankID"></app-show-accounts>
+<app-list-accounts [makeVisible]="true" [bankId]="bankID"></app-list-accounts>
