--- a/fintech-examples/fintech-ui/src/styles.scss
+++ b/fintech-examples/fintech-ui/src/styles.scss
@@ -75,3 +75,93 @@ label {
     opacity: 0.6;
   }
 }
+
+// list-transactions
+.ltx-parent {
+  display: flex;
+  flex-direction: row;
+}
+
+.ltx-list-container {
+  @extend %layout-padding;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 3px;
+  width: 100%;
+  text-align: start;
+  margin: 6px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.145);
+
+  &--shadow {
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
+  }
+}
+
+.ltx-date {
+  width: 10%;
+}
+.ltx-description {
+  width: 80%;
+}
+.ltx-amount-number {
+  width: 5%;
+  font-family: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
+  text-align: right;
+}
+.ltx-amount-currency {
+  width: 5%;
+  text-align: right;
+}
+
+// list-accounts
+.lacc-parent {
+  margin: 50px;
+  display: flex;
+  flex-direction: row;
+}
+
+.lacc-list-container {
+  @extend %layout-padding;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 3px;
+  width: 95%;
+  text-align: start;
+  border-top: 20px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.145);
+
+  &--unselected {
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+  }
+  &--selected {
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 1);
+  }
+}
+
+.lacc-list-item {
+  &__headline {
+    font-size: 1.1rem;
+    margin-right: 0;
+
+    &--small {
+      font-size: 0.85rem;
+      color: $primary;
+    }
+  }
+
+  &__subheadline {
+    font-size: 0.85rem;
+    margin-bottom: 0;
+    color: $primary;
+
+    &--large {
+      font-size: 1.1rem;
+    }
+  }
+}
