OBG 236 final optimazation

--- a/fintech-examples/fintech-ui/src/styles.scss
+++ b/fintech-examples/fintech-ui/src/styles.scss
@@ -116,6 +116,10 @@ label {
   text-align: right;
 }
 
+.ltx-category {
+  font-size: larger;
+}
+
 // list-accounts
 .lacc-parent {
   margin: 50px;
