--- a/fintech-examples/fintech-ui/src/app/dashboard/list-transactions/list-transactions.component.html
+++ b/fintech-examples/fintech-ui/src/app/dashboard/list-transactions/list-transactions.component.html
@@ -1,39 +1,21 @@
 <div *ngIf="makeVisible">
-  <div *ngIf="transactions.pending.length > 0">
-    Pending
-    <div *ngFor="let transaction of transactions.pending">
-      <div class="ltx-parent ltx-list-container ltx-list-container--shadow }}">
-        <div class="ltx-date">
-          {{ transaction.bookingDate }}
-        </div>
-        <div class="ltx-description">
-          {{ transaction.additionalInformation }}
-        </div>
-        <div class="ltx-amount-number">
-          {{ transaction.transactionAmount.amount }}
-        </div>
-        <div class="ltx-amount-currency">
-          {{ transaction.transactionAmount.currency }}
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div *ngIf="transactions.booked.length > 0">
-    Booked
-    <div *ngFor="let transaction of transactions.booked">
-      <div class="ltx-parent ltx-list-container ltx-list-container--shadow }}">
-        <div class="ltx-date">
-          {{ transaction.bookingDate }}
-        </div>
-        <div class="ltx-description">
-          {{ transaction.additionalInformation }}
-        </div>
-        <div class="ltx-amount-number">
-          {{ transaction.transactionAmount.amount }}
-        </div>
-        <div class="ltx-amount-currency">
-          {{ transaction.transactionAmount.currency }}
+  <div *ngFor="let transactionList of transactionsLists; let i = index">
+    <div *ngIf="transactionList.length > 0">
+      <span class="ltx-category">{{ transactionsListNames[i] }}</span>
+      <div *ngFor="let transaction of transactionList">
+        <div class="ltx-parent ltx-list-container ltx-list-container--shadow }}">
+          <div class="ltx-date">
+            {{ transaction.bookingDate }}
+          </div>
+          <div class="ltx-description">
+            {{ transaction.additionalInformation }}
+          </div>
+          <div class="ltx-amount-number">
+            {{ transaction.transactionAmount.amount }}
+          </div>
+          <div class="ltx-amount-currency">
+            {{ transaction.transactionAmount.currency }}
+          </div>
         </div>
       </div>
     </div>
