OBG 236 restart build

--- a/fintech-examples/fintech-ui/src/app/dashboard/list-transactions/list-transactions.component.html
+++ b/fintech-examples/fintech-ui/src/app/dashboard/list-transactions/list-transactions.component.html
@@ -3,7 +3,7 @@
     <div *ngIf="transactionList.length > 0">
       <span class="ltx-category">{{ transactionsListNames[i] }}</span>
       <div *ngFor="let transaction of transactionList">
-        <div class="ltx-parent ltx-list-container ltx-list-container--shadow }}">
+        <div class="ltx-parent ltx-list-container ltx-list-container--shadow">
           <div class="ltx-date">
             {{ transaction.bookingDate }}
           </div>
