--- a/fintech-examples/fintech-ui/src/app/common/sidebar/sidebar.component.html
+++ b/fintech-examples/fintech-ui/src/app/common/sidebar/sidebar.component.html
@@ -1,38 +1,23 @@
 <div class="sidebar">
   <ul class="nav flex-md-column">
-    <li class="nav-item">
-      <a
-        class="nav-link"
-        [routerLinkActive]="['active']"
-        [routerLink]="['/dashboard/'] + bankId"
-        (click)="contains('LIST_ACCOUNTS')"
-      >
+    <li class="nav-item{{ showListAccounts ? '' : '--disabled' }}">
+      <a class="nav-link" [routerLink]>
         <div class="icon__container">
           <img alt="bank_cards" class="text-primary" src="assets/icons/icons8-bank_cards.svg" />
         </div>
         <span class="nav__title">Accounts</span>
       </a>
     </li>
-    <li class="nav-item">
-      <a
-        class="nav-link"
-        [routerLinkActive]="['active']"
-        [routerLink]="['/dashboard/'] + bankId"
-        (click)="contains('LIST_TRANSACTIONS')"
-      >
+    <li class="nav-item{{ showInitiatePayment ? '' : '--disabled' }} sidebar-element">
+      <a class="nav-link" [routerLink]>
         <div class="icon__container">
-          <img alt="transfert" class="text-primary" src="assets/icons/icons8-sent.svg" />
+          <img alt="transfer" class="text-primary" src="assets/icons/icons8-sent.svg" />
         </div>
-        <span class="nav__title">Transfert</span>
+        <span class="nav__title">Transfer</span>
       </a>
     </li>
-    <li class="nav-item">
-      <a
-        [routerLinkActive]="['active']"
-        [routerLink]="['/dashboard/'] + bankId"
-        class="nav-link"
-        (click)="contains('UPDATE_AUTHORIZATION')"
-      >
+    <li class="nav-item sidebar-element">
+      <a class="nav-link" [routerLink]>
         <div class="icon__container">
           <img alt="settings" class="text-primary" src="assets/icons/icons8-maintenance.svg" />
         </div>
