--- a/consent-ui/src/app/ais/initiation/accounts/accounts-consent-review/accounts-consent-review.component.html
+++ b/consent-ui/src/app/ais/initiation/accounts/accounts-consent-review/accounts-consent-review.component.html
@@ -1,10 +1,10 @@
-<form [formGroup]="accountAccessForm">
-  <div class="card">
-    <div class="card-body">
-      <h2 class="mb-4 text-left">Access permission for accounts in {{bankName}}</h2>
-      <p class="text-secondary mb-5 text-left">Please choose an account access level for <b>{{finTechName}}</b></p>
+<div class="card">
+  <div class="card-body">
+    <h2 class="mb-4 text-left">Access permission for accounts in {{aspspName}}</h2>
+    <p class="text-secondary mb-5 text-left">Review an account access level for <strong>{{finTechName}}</strong></p>
       <div class="form-group my-4">
-        <div *ngFor="let access of accountAccesses; let i = index" class="form-check">
+        <!--
+        <div *ngFor="let access of aisConsent.access.accounts; let i = index" class="form-check">
           <input class="form-check-input"
                  type="radio"
                  name="accountAccess"
@@ -13,10 +13,11 @@
           <label class="form-check-label ml-4" [for]="access.id">{{access.message}}</label>
         </div>
       </div>
+      -->
       <div class="form-group d-flex flex-row justify-content-lg-between">
         <button class="btn md-6 w-100 mr-sm-2 mr-md-3 btn-outline-secondary">Cancel</button>
-        <button type="submit" class="btn md-6 w-100 btn-primary">{{submitButtonMessage()}}</button>
+        <button type="button" class="btn md-6 w-100 btn-primary" (click)="onConfirm()">Confirm</button>
       </div>
     </div>
   </div>
-</form>
+</div>
