--- a/consent-ui/src/app/ais/initiation/transactions/entry-page-transactions/entry-page-transactions.component.html
+++ b/consent-ui/src/app/ais/initiation/transactions/entry-page-transactions/entry-page-transactions.component.html
@@ -1,8 +1,11 @@
 <form [formGroup]="transactionsAccessForm" (ngSubmit)="transactionsAccessForm.valid && onSubmit()">
   <div class="card">
     <div class="card-body">
-      <h2 class="mb-4 text-left">Access permission to read transaction data in {{bankName}}</h2>
-      <p class="text-secondary mb-5 text-left">Please select for which accounts you want to share transaction data with <b>{{finTechName}}</b></div>
+      <h2 class="mb-4 text-left">Access permission to read transaction data in {{aspspName}}</h2>
+      <p class="text-secondary mb-5 text-left">
+        Please select for which accounts you want to share transaction data with <strong>{{finTechName}}</strong>
+      </p>
+    </div>
 
       <div class="col-12 font-weight-light" *ngFor="let account of accounts, let i = index">
         <div class="form-check">
