--- a/consent-ui/src/app/ais/initiation/accounts/accounts-consent-review/accounts-consent-review.component.html
+++ b/consent-ui/src/app/ais/initiation/accounts/accounts-consent-review/accounts-consent-review.component.html
@@ -3,17 +3,17 @@
     <h2 class="mb-4 text-left">Access permission for accounts in {{aspspName}}</h2>
     <p class="text-secondary mb-5 text-left">Review an account access level for <strong>{{finTechName}}</strong></p>
       <div class="form-group my-4">
-        <!--
-        <div *ngFor="let access of aisConsent.access.accounts; let i = index" class="form-check">
-          <input class="form-check-input"
-                 type="radio"
-                 name="accountAccess"
-                 [id]="access.id"
-                 [checked]="selectedAccess.id === access.id" (change)="handleMethodSelectedEvent(access)">
-          <label class="form-check-label ml-4" [for]="access.id">{{access.message}}</label>
-        </div>
-      </div>
-      -->
+        <ng-container [ngSwitch]="aisConsent.access.availableAccounts">
+          <ng-container *ngSwitchCase="AccountAccessLevel.ALL_ACCOUNTS">
+            <p>Access to all your accounts is to be granted</p>
+          </ng-container>
+          <ng-container *ngSwitchCase="AccountAccessLevel.ALL_ACCOUNTS_WITH_BALANCES">
+            <p>Access to all your accounts with balances is to be granted</p>
+          </ng-container>
+          <ng-container *ngSwitchCase="AccountAccessLevel.FINE_GRAINED">
+
+          </ng-container>
+        </ng-container>
       <div class="form-group d-flex flex-row justify-content-lg-between">
         <button class="btn md-6 w-100 mr-sm-2 mr-md-3 btn-outline-secondary">Cancel</button>
         <button type="button" class="btn md-6 w-100 btn-primary" (click)="onConfirm()">Confirm</button>
