--- a/consent-ui/src/app/ais/initiation/common/limited-access/limited-access.component.html
+++ b/consent-ui/src/app/ais/initiation/common/limited-access/limited-access.component.html
@@ -1,1 +1,13 @@
-<p>limited-access works!</p>
+<form [formGroup]="limitedAccountAccessForm">
+  <div class="card">
+    <div class="card-body">
+
+      <consent-app-account-selector [targetForm]="limitedAccountAccessForm" [accounts]="accounts"></consent-app-account-selector>
+
+      <div class="form-group d-flex flex-row justify-content-lg-between">
+        <button class="btn md-6 w-100 mr-sm-2 mr-md-3 btn-outline-secondary">Cancel</button>
+        <button type="button" class="btn md-6 w-100 btn-primary" [disabled]="limitedAccountAccessForm.invalid" (click)="onSelect()">Select</button>
+      </div>
+    </div>
+  </div>
+</form>
