OBG-370. Done account access review page

--- a/consent-ui/src/app/ais/initiation/common/dedicated-access/dedicated-access.component.html
+++ b/consent-ui/src/app/ais/initiation/common/dedicated-access/dedicated-access.component.html
@@ -2,6 +2,9 @@
   <div class="card">
     <div class="card-body">
 
+      <h2 class="mb-4 text-left">Dedicated access for accounts in {{aspspName}}</h2>
+
+      <p class="text-secondary mb-5 text-left">Accounts with their details to be visible for <strong>{{finTechName}}</strong></p>
       <consent-app-account-selector [targetForm]="limitedAccountAccessForm" [accounts]="accounts"></consent-app-account-selector>
 
       <div class="form-group d-flex flex-row justify-content-lg-between">
