--- a/consent-ui/src/app/ais/initiation/accounts/accounts-consent-review/accounts-consent-review.component.html
+++ b/consent-ui/src/app/ais/initiation/accounts/accounts-consent-review/accounts-consent-review.component.html
@@ -2,7 +2,7 @@
   <div class="card-body">
     <h2 class="mb-4 text-left">Access permission for accounts in {{aspspName}}</h2>
     <p class="text-secondary mb-5 text-left">Review an account access level for <strong>{{finTechName}}</strong></p>
-    <ng-container [ngSwitch]="aisConsent.consent.access.availableAccounts">
+    <ng-container [ngSwitch]="aisConsent.level">
       <div class="form-group my-4">
         <ul>
           <ng-container *ngSwitchCase="accountAccessLevel.ALL_ACCOUNTS">
@@ -12,7 +12,14 @@
             <li><strong>All</strong> your accounts <strong>with balances</strong> will be visible</li>
           </ng-container>
           <ng-container *ngSwitchCase="accountAccessLevel.FINE_GRAINED">
-            <li></li>
+            <li>
+              Dedicated access to <strong>account details and transactions</strong> for following accounts IBAN's:
+              <ul class="list-group px-5">
+                <li *ngFor="let account of aisConsent.consent.access.accounts">
+                  {{account}}
+                </li>
+              </ul>
+            </li>
           </ng-container>
           <li>The consent will be valid until <strong>{{aisConsent.consent.validUntil}}</strong></li>
           <li>The consent can be used <strong>{{aisConsent.consent.frequencyPerDay}}</strong> times per day</li>
