--- a/consent-ui/src/app/ais/password-input-page/password-input-page.component.html
+++ b/consent-ui/src/app/ais/password-input-page/password-input-page.component.html
@@ -1,50 +1,62 @@
-<div class="bg-sm-light sticky-top">
-  <nav class="navbar navbar-light text-primary py-3">
-    <a class="navbar-brand" href="#">
-      <img class="logo" [src]="customizeService.getLogo()" />
-    </a>
-  </nav>
-</div>
+<div class="d-md-flex align-items-center h-100 align-items-stretch">
 
-<div class="d-md-flex bg-white h-md-100">
-  <div class="col">
-    <div class="d-md-flex align-items-center h-100 p-4 justify-content-center">
-      <div class="d-md-flex align-items-center">
-        <form [formGroup]="loginForm">
+  <!-- Logo -->
+  <div class="bg-sm-light sticky-top">
+    <nav class="navbar navbar-light text-primary py-3">
+      <a class="navbar-brand" href="#">
+        <img class="logo" [src]="customizeService.getLogo()" />
+      </a>
+    </nav>
+  </div>
+  <!-- Consent info -->
+  <div class="col-md-4 p-0 bg-light">
+    <div class="d-md-flex align-items-center h-100 justify-content-center">
+      <consent-app-account-details></consent-app-account-details>
+    </div>
+  </div>
 
-          <div class="card">
-            <div class="card-body">
-              <h2 class="card-title text-center font-weight-bold"><span>adorsys </span>Banking Gateway</h2>
-              <div class="font-weight-light my-4 text-muted">Please enter your pin.</div>
+  <!-- Password input -->
+  <div class="col-md-8 bg-white h-md-100">
+    <div class="d-md-flex bg-white h-md-100">
+      <div class="col">
+        <div class="d-md-flex align-items-center h-100 p-4 justify-content-center">
+          <div class="d-md-flex align-items-center">
+            <form [formGroup]="passwordForm">
+
+              <div class="card">
+                <div class="card-body">
+                  <h2 class="card-title text-center font-weight-bold">Input PIN</h2>
+                  <div class="font-weight-light my-4 text-muted">Please enter pin to you bank in order to confirm the consent.</div>
 
 
-              <div class="form-group">
-                <label for="pin" class="text-muted">Pin:</label><br>
-                <input type="password"
-                       id="pin"
-                       name="pin"
-                       formControlName="pin"
-                       placeholder="Enter your pin"
-                       [ngClass]="{ 'is-invalid': loginForm.controls['pin'].touched && loginForm.controls['pin'].errors }"
-                       class="form-control">
-                <div class="invalid-feedback"
-                     *ngIf="loginForm.controls['pin'].touched && loginForm.controls['pin'].hasError('required')">Pin is
-                  required
+                  <div class="form-group">
+                    <label for="pin" class="text-muted">Pin:</label><br>
+                    <input type="password"
+                           id="pin"
+                           name="pin"
+                           formControlName="pin"
+                           placeholder="Enter your pin"
+                           [ngClass]="{ 'is-invalid': passwordForm.controls['pin'].touched && passwordForm.controls['pin'].errors }"
+                           class="form-control">
+                    <div class="invalid-feedback"
+                         *ngIf="passwordForm.controls['pin'].touched && passwordForm.controls['pin'].hasError('required')">
+                      Pin is required
+                    </div>
+                  </div>
+                </div>
+
+                <div class="card-footer no-bg-color">
+                  <div class="row my-3">
+                    <div class="col">
+                      <button type="submit" class="btn btn-primary btn-block" [disabled]="passwordForm.invalid">Confirm</button>
+                    </div>
+                  </div>
                 </div>
               </div>
 
-            </div>
-
-            <div class="card-footer no-bg-color">
-              <div class="row my-3">
-                <div class="col">
-                  <button type="submit" class="btn btn-primary btn-block" [disabled]="loginForm.invalid">Confirm</button>
-                </div>
-              </div>
-            </div>
+            </form>
           </div>
-
-        </form>
+        </div>
       </div>
     </div>
   </div>
