OBG-370. Support for allPsd2 field

--- a/consent-ui/src/app/ais/initiation/accounts/accounts-consent-review/accounts-consent-review.component.html
+++ b/consent-ui/src/app/ais/initiation/accounts/accounts-consent-review/accounts-consent-review.component.html
@@ -16,7 +16,7 @@
               Dedicated access to <strong>account details and transactions</strong> for following accounts IBAN's:
               <ul class="list-group px-5">
                 <li *ngFor="let account of aisConsent.consent.access.accounts">
-                  {{account}}
+                  <strong>{{account}}</strong>
                 </li>
               </ul>
             </li>
