refactor routes in dashboardComponent for listAccountComponent

--- a/fintech-examples/fintech-ui/src/app/dashboard/home/home.component.html
+++ b/fintech-examples/fintech-ui/src/app/dashboard/home/home.component.html
@@ -1,1 +1,1 @@
-<app-list-accounts [makeVisible]="true" [bankId]="bankID"></app-list-accounts>
+<!--<app-list-accounts [makeVisible]="true" [bankId]="bankID"></app-list-accounts>-->
