--- a/fintech-examples/fintech-ui/src/app/dashboard/sidebar/sidebar.component.html
+++ b/fintech-examples/fintech-ui/src/app/dashboard/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <ul class="nav flex-md-column">
     <li class="nav-item{{ showListAccounts ? '' : '--disabled' }}">
-      <a class="nav-link" [routerLink]>
+      <a class="nav-link" [routerLink]="['account']">
         <div class="icon__container">
           <img alt="bank_cards" class="text-primary" src="assets/icons/icons8-bank_cards.svg" />
         </div>
