--- a/fintech-examples/fintech-ui/src/app/dashboard/sidebar/sidebar.component.scss
+++ b/fintech-examples/fintech-ui/src/app/dashboard/sidebar/sidebar.component.scss
@@ -51,6 +51,11 @@
   }
 }
 
+.disabled {
+  pointer-events: none;
+  display: none;
+}
+
 @media (max-width: 767px) {
   .nav-item {
     margin-left: 1rem;
