--- a/consent-ui/src/app/ais/password-input-page/password-input-page.component.html
+++ b/consent-ui/src/app/ais/password-input-page/password-input-page.component.html
@@ -21,7 +21,7 @@
       <div class="col">
         <div class="d-md-flex align-items-center h-100 p-4 justify-content-center">
           <div class="d-md-flex align-items-center">
-            <form [formGroup]="passwordForm">
+            <form [formGroup]="passwordForm" (ngSubmit)="submit()">
 
               <div class="card">
                 <div class="card-body">
