remove exsessive code

--- a/consent-ui/src/app/ais/password-input-page/password-input-page.component.html
+++ b/consent-ui/src/app/ais/password-input-page/password-input-page.component.html
@@ -4,7 +4,7 @@
   <div class="bg-sm-light sticky-top">
     <nav class="navbar navbar-light text-primary py-3">
       <a class="navbar-brand" href="#">
-        <img class="logo" [src]="customizeService.getLogo()" />
+        <img class="logo" [src]="" />
       </a>
     </nav>
   </div>
