OBG-371. PR comments fix

--- a/consent-ui/src/app/ais/entry-page/initiation/common/accounts-reference/accounts-reference.component.html
+++ b/consent-ui/src/app/ais/entry-page/initiation/common/accounts-reference/accounts-reference.component.html
@@ -11,7 +11,7 @@
              class="form-control">
       <button class='btn' (click)="removeAccount(account)">
         <div class="mr-2">
-          <img src="../../../../assets/icons/minus.png">
+          <img src="assets/icons/minus.png">
         </div>
       </button>
     </div>
@@ -27,7 +27,7 @@
 
 <button class='btn' (click)="addAccount()">
   <div class="mr-2">
-    <img src="../../../../assets/icons/plus.png"> Add account
+    <img src="assets/icons/plus.png"> Add account
   </div>
 </button>
 
