--- a/consent-ui/src/app/ais/route-based-card-with-sidebar/route-based-card-with-sidebar.component.html
+++ b/consent-ui/src/app/ais/route-based-card-with-sidebar/route-based-card-with-sidebar.component.html
@@ -9,7 +9,7 @@
       </nav>
     </div>
     <div class="d-md-flex align-items-center h-100 justify-content-center">
-      <!-- <app-account-details></app-account-details> -->
+      <consent-app-consent-info></consent-app-consent-info>
     </div>
   </div>
 
