--- a/consent-ui/src/app/ais/to-aspsp-page/to-aspsp-redirection.component.html
+++ b/consent-ui/src/app/ais/to-aspsp-page/to-aspsp-redirection.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-body">
     <h2 class="mb-4 text-left">You need to be redirected to {{aspspName}} for consent authorization</h2>
-    <p class="text-secondary mb-5 text-left">Redirection will be done for <strong>{{finTechName}}</strong></p>
+    <p class="text-secondary mb-5 text-left">Requested by <strong>{{finTechName}}</strong></p>
 
     <div class="form-group d-flex flex-row justify-content-lg-between">
       <button class="btn md-6 w-100 mr-sm-2 mr-md-3 btn-outline-secondary">Cancel</button>
